Program mostly works. The calculation is not quite correct but will be improved soon.

--- a/SlowTypist.html
+++ b/SlowTypist.html
@@ -87,7 +87,7 @@
         <div class="col-xs-12">
           <div class="well text-center">
             <p>
-              Output: <!-- Angular model output goes here -->{{distance(entry, newForm)}}
+              Output: <!-- Angular model output goes here -->{{distance(entry, newForm) | number:2 }}
 
             </p>
           </div>
