--- a/SlowTypist.html
+++ b/SlowTypist.html
@@ -91,9 +91,46 @@
           </form>
         </div>
       </div>
+      <hr />
       <div class="row">
         <div class="col-xs-12">
           <!-- Interactive keypad goes here -->
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                <button type="button" class="key btn btn-default">1</button>
+                <button type="button" class="key btn btn-default">2</button>
+                <button type="button" class="key btn btn-default">3</button>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                <button type="button" class="key btn btn-default">4</button>
+                <button type="button" class="key btn btn-default">5</button>
+                <button type="button" class="key btn btn-default">6</button>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                <button type="button" class="key btn btn-default">7</button>
+                <button type="button" class="key btn btn-default">8</button>
+                <button type="button" class="key btn btn-default">9</button>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                <button type="button" class="key btn btn-default">.</button>
+                <button type="button" class="key btn btn-default">0</button>
+                <button type="button" class="key btn btn-default">#</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <br />
