Centered the keypad.

--- a/SlowTypist.html
+++ b/SlowTypist.html
@@ -93,7 +93,7 @@
       </div>
       <hr />
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 text-center">
           <!-- Interactive keypad goes here -->
           <div class="row">
             <div class="col-xs-12">
