--- a/SlowTypist.html
+++ b/SlowTypist.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en" ng-app="IPDistance">
 <head>
@@ -132,6 +133,13 @@
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry('.')">.</button>
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(0)">0</button>
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry('#')">#</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <div class="btn-group btn-group-lg" role="group" aria-label="...">
+                        <button type="button" id="clearKey" class="btn btn-default" ng-click="resetKeypad()">CLEAR</button>
                       </div>
                     </div>
                   </div>
