--- a/SlowTypist.html
+++ b/SlowTypist.html
@@ -16,6 +16,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <!-- Font CDN -->
   <link href='https://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- My JavaScript and CSS files -->
   <script src="js/slowTypist.js"></script>
   <link rel="stylesheet" href="css/main.css" />
@@ -106,6 +108,7 @@
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(1)">1</button>
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(2)">2</button>
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(3)">3</button>
+						<button type="button" class="key btn btn-default" ng-click="keypadDelete()"><i class="fa fa-arrow-left"></i>DEL</button>
                       </div>
                     </div>
                   </div>
