--- a/SlowTypist.html
+++ b/SlowTypist.html
@@ -85,6 +85,27 @@
           </div>
         </div>
       </div>
+			
+			<div class="row">
+				<div class="col-xs-12">
+				<ul ng-hide="addressList.sum <= 0" class="list-group text-center">
+					<div ng-repeat="record in addressList track by $index" ng-if="record.ip">
+						<li class="list-group-item">
+							<span class="badge" ng-click="removeFromList(record)">
+								<i class="fa fa-remove">
+								</i>
+							</span>
+							{{record.ip}} : {{record.distance | number : 2}} cm
+							</li>
+					</div>
+					<li class="list-group-item list-group-item-info">
+						Total Distance: {{ addressList.sum | number : 2 }} cm
+					</li>
+				</ul>
+				</div>
+			</div>
+			
+			
       <div class="row">
         <div class="col-xs-12">
           <form name="newForm">
@@ -94,6 +115,17 @@
                   <input type="text" id="address" ng-model="entry.address" required ng-pattern="/^(?:(?:2[0-4]\d|25[0-5]|1\d{2}|[1-9]?\d)\.){3}(?:2[0-4]\d|25[0-5]|1\d{2}|[1-9]?\d)(?:\:(?:\d|[1-9]\d{1,3}|[1-5]\d{4}|6[0-4]\d{3}|65[0-4]\d{2}|655[0-2]\d|6553[0-5]))?$/" class="form-control text-center" placeHolder="000.000.000.000" />
                 </div>
               </div>
+							<br />
+							<div class="row">
+								<div class="col-xs-12">
+									<div class="well well-sm text-center">
+										<p>
+											Entry Distance: {{distance(entry, newForm) | number:2 }} cm
+										</p>
+									</div>
+								</div>
+							</div>
+							
               <div class="row">
                 <div class="col-xs-12">
                 </div>
@@ -118,6 +150,7 @@
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(4)">4</button>
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(5)">5</button>
                         <button type="button" class="key btn btn-default" ng-click="keypadEntry(6)">6</button>
+						<button type="button" class="key btn btn-default" ng-disabled="!newForm.$valid" ng-click="keypadAdd(entry.address)"><i class="fa fa-plus-circle"></i>ADD</button>
                       </div>
                     </div>
                   </div>
@@ -150,17 +183,6 @@
               </div>
             </fieldset>
           </form>
-        </div>
-      </div>
-      <hr />
-      <br />
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="well text-center">
-            <p>
-              Total Distance: {{distance(entry, newForm) | number:2 }} cm
-            </p>
-          </div>
         </div>
       </div>
     </div>
